<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ShopCenterFragment">

    <LinearLayout
        android:id="@+id/linearLayout_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_selectShopCondition"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:background="@null"
            android:maxLines="1"
            android:ellipsize="end"
            android:button="@null"
            android:drawableRight="@drawable/shopping_mall_selector_title_left"
            android:gravity="center"
            android:text="@string/ShoppingMall_allShop"
            android:textColor="@drawable/shopping_mall_selector_title_left"
            android:textSize="@dimen/textFontSize_12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/title_ShoppingMall"
            android:textColor="@color/colorBlack_FF333333"
            android:textSize="@dimen/textFontSize_20" />

        <TextView
            android:id="@+id/tv_applyEnter"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingRight="25dp"
            android:text="@string/ShoppingMall_applyEnter"
            android:textColor="@color/colorBlack_FF333333"
            android:textSize="@dimen/textFontSize_12" />
    </LinearLayout>

    <View
        android:id="@+id/view_border"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dividingLineColor" />

    <com.afinalstone.androidstudy.swiperefreshview.SwipeRefreshRecycleView
        android:id="@+id/swipeRefreshRecycleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
