<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite_FFFFFFFF"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <include layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="302dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:background="@drawable/check_stand_shape_check_out"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout_arriveTomorrow"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:background="@drawable/check_stand_shape_check_left_select"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_arriveTomorrow"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/CheckStandWithdrawalActivity_tv_arriveTomorrow"
                android:textColor="@color/colorWhite_FFFFFFFF"
                android:textSize="@dimen/textFontSize_16" />

            <ImageView
                android:id="@+id/iv_arriveTomorrow"
                android:layout_width="60dp"
                android:layout_height="36dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/icon_check_tomorry_white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_arriveImmediately"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:background="@drawable/check_stand_shape_check_right_normal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_arriveImmediately"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/CheckStandWithdrawalActivity_tv_arriveImmediately"
                android:textColor="@color/colorRed_FFFF6C6C"
                android:textSize="@dimen/textFontSize_16" />

            <ImageView
                android:id="@+id/iv_arriveImmediately"
                android:layout_width="60dp"
                android:layout_height="36dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/icon_check_immediately_red" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@color/colorWhite_FFFFFFFF"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorRed_FFFF6C6C"
            android:gravity="center|left"
            android:paddingLeft="40dp"
            android:text="@string/CheckStandWithdrawalActivity_tv_totalMoneyCanWithdraw"
            android:textColor="@color/colorWhite_FFFFFFFF"
            android:textSize="@dimen/textFontSize_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorRed_FFFF6C6C"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_totalPrices"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:paddingLeft="40dp"
                android:text="5800.00"
                android:textColor="@color/colorWhite_FFFFFFFF"
                android:textSize="@dimen/textFontSize_23"
                android:textStyle="bold" />

            <Button
                android:layout_width="70dp"
                android:layout_height="22dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/check_stand_shape_withdrawal"
                android:gravity="center"
                android:text="@string/CheckStandWithdrawalActivity_tv_WithdrawImmediately"
                android:textColor="@color/colorWhite_FFFFFFFF"
                android:textSize="@dimen/textFontSize_12" />

        </LinearLayout>


        <ImageView
            android:id="@+id/iv_QDCode"
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@color/colorWhite_FFFFFFFF"
            android:scaleType="centerInside" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:background="@color/dividingLineColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:background="@color/colorWhite_FFFFFFFF"
                android:gravity="center"
                android:text="@string/CheckStandWithdrawalActivity_tv_SaoMDesc" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorWhite_FFFFFFFF"
            android:gravity="center"
            android:text="费率：0.55%" />
    </LinearLayout>

</LinearLayout>
